cabal-version:      3.0
name:               Recursive-Machine
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jack B
maintainer:         jack.goldsbrough@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Recursive-Machine
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      hashable,
                      unordered-containers
    hs-source-dirs:   .
    default-language: GHC2021
