cabal-version:      3.0
name:               Recursive-Machine
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jack B
maintainer:         jack.goldsbrough@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Recursive-Machine
    import:           warnings
    main-is:          main.hs
    -- other-modules: Sequences.Fibonacci
    -- other-extensions:
    build-depends:    base >= 4.7 && < 5,
	                  mtl,
	                  array,
                      hashable,
                      unordered-containers,
					  time,
					  deepseq,
					  process
    hs-source-dirs:   .
    default-language: GHC2021
